--- a/SerializationErrorSideOutput/src/main/resources/log4j2.properties
+++ b/SerializationErrorSideOutput/src/main/resources/log4j2.properties
@@ -1,4 +1,4 @@
-rootLogger.level = WARN
+rootLogger.level = INFO
 rootLogger.appenderRef.console.ref = ConsoleAppender
 
 # Log all infos to the console
