--- a/KeySerializationSchema/pom.xml
+++ b/KeySerializationSchema/pom.xml
@@ -49,7 +49,8 @@ under the License.
         <dependency>
             <groupId>com.trifork.cheetah.processing</groupId>
             <artifactId>cheetah-lib-processing</artifactId>
-            <version>4.0.0</version>
+            <version>5.1.1</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
