use cheetahbot read package PAT

--- a/.github/workflows/run-all-component-tests.yml
+++ b/.github/workflows/run-all-component-tests.yml
@@ -73,7 +73,7 @@ jobs:
         uses: ./.github/actions/component-test
         with:
           context-path: ./${{ matrix.folder }}/
-          access-token: ${{ secrets.PACKAGE_PAT }}
+          access-token: ${{ secrets.READ_PACKAGE_PAT }}
           initial-kafka-topics: ${{ matrix.initial-kafka-topics }}
           development-infrastructure-ref: ${{ inputs.development-infrastructure-ref }}
 
