--- a/.github/workflows/run-component-tests.yml
+++ b/.github/workflows/run-component-tests.yml
@@ -82,7 +82,7 @@ jobs:
         if: ${{ steps.changed-files.outputs.any_changed == 'true' }}
         with:
           context-path: ./${{ matrix.folder }}/
-          access-token: ${{ secrets.PACKAGE_PAT }}
+          access-token: ${{ secrets.READ_PACKAGE_PAT }}
           initial-kafka-topics: ${{ matrix.initial-kafka-topics }}
 
   success:
