--- a/Observability/docker-compose.yaml
+++ b/Observability/docker-compose.yaml
@@ -37,7 +37,7 @@ services:
         jobmanager.rpc.address: observability-job
         scheduler-mode: reactive
         rest.flamegraph.enabled: true
-        state.backend: rocksdb
+        state.backend.type: rocksdb
         state.checkpoints.dir: file:///checkpoints/processing
         state.savepoints.dir: file:///checkpoints/processing
         execution.checkpointing.interval: 300 seconds
