--- a/DockerComposeExamples/RunMultipleFlinkJobs/docker-compose.yaml
+++ b/DockerComposeExamples/RunMultipleFlinkJobs/docker-compose.yaml
@@ -49,7 +49,7 @@ services:
         jobmanager.rpc.address: jsontoavro-jobmanager
         scheduler-mode: reactive
         rest.flamegraph.enabled: true
-        state.backend: rocksdb
+        state.backend.type: rocksdb
         state.checkpoints.dir: file:///checkpoints/processing
         state.savepoints.dir: file:///checkpoints/processing
         execution.checkpointing.interval: 300 seconds
@@ -113,7 +113,7 @@ services:
         jobmanager.rpc.address: avrotojson-jobmanager
         scheduler-mode: reactive
         rest.flamegraph.enabled: true
-        state.backend: hashmap
+        state.backend.type: hashmap
         state.checkpoints.dir: file:///checkpoints/processing
         state.savepoints.dir: file:///checkpoints/processing
         execution.checkpointing.interval: 300 seconds
