--- a/ExternalLookup/docker-compose.yaml
+++ b/ExternalLookup/docker-compose.yaml
@@ -44,7 +44,7 @@ services:
         jobmanager.rpc.address: externallookup-job
         scheduler-mode: reactive
         rest.flamegraph.enabled: true
-        state.backend: rocksdb
+        state.backend.type: rocksdb
         state.checkpoints.dir: file:///checkpoints/processing
         state.savepoints.dir: file:///checkpoints/processing
         execution.checkpointing.interval: 300 seconds
