--- a/TransformAndStore/docker-compose.yaml
+++ b/TransformAndStore/docker-compose.yaml
@@ -51,7 +51,7 @@ services:
         jobmanager.rpc.address: transformandstore-jobmanager
         scheduler-mode: reactive
         rest.flamegraph.enabled: true
-        state.backend: rocksdb
+        state.backend.type: rocksdb
         state.checkpoints.dir: file:///checkpoints/processing
         state.savepoints.dir: file:///checkpoints/processing
         execution.checkpointing.interval: 300 seconds
