--- a/TumblingWindow/docker-compose.yaml
+++ b/TumblingWindow/docker-compose.yaml
@@ -38,7 +38,7 @@ services:
         jobmanager.rpc.address: tumblingwindow-job
         scheduler-mode: reactive
         rest.flamegraph.enabled: true
-        state.backend: rocksdb
+        state.backend.type: rocksdb
         state.checkpoints.dir: file:///checkpoints/processing
         state.savepoints.dir: file:///checkpoints/processing
         execution.checkpointing.interval: 300 seconds
