--- a/AvroToJson/pom.xml
+++ b/AvroToJson/pom.xml
@@ -30,7 +30,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <flink.version>1.18.1</flink.version>
+        <flink.version>1.19.1</flink.version>
     </properties>
 
     <repositories>
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>com.trifork.cheetah.processing</groupId>
             <artifactId>cheetah-lib-processing</artifactId>
-            <version>5.1.2</version>
+            <version>5.2.0-bump-flink-version-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
