--- a/SerializationErrorCatch/Dockerfile
+++ b/SerializationErrorCatch/Dockerfile
@@ -31,7 +31,7 @@ RUN --mount=type=secret,id=GITHUB_TOKEN \
 #
 #  Install jar onto clean runtime system.
 #
-FROM ghcr.io/trifork/cheetah-flink:5.2.0-bump-flink-version-SNAPSHOT77-flink-1.19.1-java17
+FROM ghcr.io/trifork/cheetah-flink:6.0.0-flink-1.19.1-java17
 
 COPY --from=build /app/target/SerializationErrorCatch*.jar /opt/flink/usrlib/artifacts/SerializationErrorCatch.jar
 
