Mirgrate to Cheetah.Kafka 1.0.1
Signed-off-by: pegtrifork <peg@trifork.com>

--- a/EnrichStream/ComponentTest/appsettings.json
+++ b/EnrichStream/ComponentTest/appsettings.json
@@ -1,11 +1,13 @@
 {
-  "KAFKA": {
-    "URL": "localhost:9092",
-    "OAUTH2": {
-      "CLIENTID": "default-access",
-      "CLIENTSECRET": "default-access-secret",
-      "SCOPE": "kafka",
-      "TOKENENDPOINT": "http://localhost:1852/realms/local-development/protocol/openid-connect/token"
+  "Kafka": {
+    "Url": "localhost:9092",
+    "SecurityProtocol": "SaslPlaintext",
+    "SaslMechanism": "OAuthBearer",
+    "OAuth2": {
+      "ClientId": "default-access",
+      "ClientSecret": "default-access-secret",
+      "TokenEndpoint": "http://localhost:1852/realms/local-development/protocol/openid-connect/token ",
+      "Scope": "kafka"
     }
   }
 }
