--- a/AvroToJson/ComponentTest/AvroToJson.ComponentTest.csproj
+++ b/AvroToJson/ComponentTest/AvroToJson.ComponentTest.csproj
@@ -7,7 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Cheetah.Kafka" Version="1.0.0" />
+        <PackageReference Include="Cheetah.Kafka" Version="1.1.0-fix-kafka-test-reader-and-writer-SNAPSHOT5" />
+        <PackageReference Include="Cheetah.SchemaRegistry" Version="1.1.0-fix-kafka-test-reader-and-writer-SNAPSHOT6" />
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
         <PackageReference Include="xunit" Version="2.8.1" />
