--- a/DockerComposeExamples/RunMultipleFlinkJobs/docker-compose.yaml
+++ b/DockerComposeExamples/RunMultipleFlinkJobs/docker-compose.yaml
@@ -9,12 +9,18 @@ services:
         - GITHUB_TOKEN
         - GITHUB_ACTOR
     environment:
-      KAFKA__URL: kafka:19092
-      KAFKA__OAUTH2__CLIENTID: default-access
-      KAFKA__OAUTH2__CLIENTSECRET: default-access-secret
-      KAFKA__OAUTH2__SCOPE: kafka schema-registry
-      KAFKA__OAUTH2__TOKENENDPOINT: http://keycloak:1852/realms/local-development/protocol/openid-connect/token
-      KAFKA__SCHEMAREGISTRYURL: http://schema-registry:8080/apis/ccompat/v7
+      Kafka__Url: kafka:19092
+      Kafka__SecurityProtocol: SaslPlaintext
+      Kafka__SaslMechanism: OAuthBearer
+      Kafka__OAuth2__ClientId: default-access
+      Kafka__OAuth2__ClientSecret: default-access-secret
+      Kafka__OAuth2__TokenEndpoint: http://keycloak:1852/realms/local-development/protocol/openid-connect/token
+      Kafka__OAuth2__Scope: kafka
+      SchemaRegistry__Url: schema-registry:8080/apis/ccompat/v7
+      SchemaRegistry__OAuth2__ClientId: default-access
+      SchemaRegistry__OAuth2__ClientSecret: default-access-secret
+      SchemaRegistry__OAuth2__TokenEndpoint: http://keycloak:1852/realms/local-development/protocol/openid-connect/token
+      SchemaRegistry__OAuth2__Scope: schema-registry
     depends_on:
       jsontoavro-jobmanager:
         condition: service_healthy
