--- a/JsonToAvro/ComponentTest/appsettings.json
+++ b/JsonToAvro/ComponentTest/appsettings.json
@@ -1,12 +1,22 @@
 {
-  "KAFKA": {
-    "URL": "localhost:9092",
-    "SCHEMAREGISTRYURL": "http://localhost:8081/apis/ccompat/v7",
-    "OAUTH2": {
-      "CLIENTID": "default-access",
-      "CLIENTSECRET": "default-access-secret",
-      "SCOPE": "kafka schema-registry",
-      "TOKENENDPOINT": "http://localhost:1852/realms/local-development/protocol/openid-connect/token"
+  "Kafka": {
+    "Url": "localhost:9092",
+    "SecurityProtocol": "SaslPlaintext",
+    "SaslMechanism": "OAuthBearer",
+    "OAuth2": {
+      "ClientId": "default-access",
+      "ClientSecret": "default-access-secret",
+      "TokenEndpoint": "http://localhost:1852/realms/local-development/protocol/openid-connect/token ",
+      "Scope": "kafka"
+    }
+  },
+  "SchemaRegistry": {
+    "Url": "localhost:8081/apis/ccompat/v7",
+    "OAuth2":{
+      "ClientId": "default-access",
+      "ClientSecret": "default-access-secret",
+      "TokenEndpoint": "http://localhost:1852/realms/local-development/protocol/openid-connect/token ",
+      "Scope": "schema-registry"
     }
   }
 }
