--- a/KeySerializationSchema/ComponentTest/KeySerializationSchema.ComponentTest.csproj
+++ b/KeySerializationSchema/ComponentTest/KeySerializationSchema.ComponentTest.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
+        <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+        <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
     </PropertyGroup>
 
     <ItemGroup>
