--- a/AvroToJson/ComponentTest/AvroToJson.ComponentTest.csproj
+++ b/AvroToJson/ComponentTest/AvroToJson.ComponentTest.csproj
@@ -8,8 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Cheetah.Kafka" Version="1.1.0-fix-kafka-test-reader-and-writer-SNAPSHOT7" />
-        <PackageReference Include="Cheetah.SchemaRegistry" Version="1.1.0-fix-kafka-test-reader-and-writer-SNAPSHOT8" />
+        <PackageReference Include="Cheetah.Kafka" Version="1.0.1-RC5" />
+        <PackageReference Include="Cheetah.SchemaRegistry" Version="1.0.1-RC6" />
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
         <PackageReference Include="xunit" Version="2.8.1" />
