--- a/AvroToJson/ComponentTest/AvroToJson.ComponentTest.csproj
+++ b/AvroToJson/ComponentTest/AvroToJson.ComponentTest.csproj
@@ -8,8 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Cheetah.Kafka" Version="1.0.1-RC5" />
-        <PackageReference Include="Cheetah.SchemaRegistry" Version="1.0.1-RC6" />
+        <PackageReference Include="Cheetah.SchemaRegistry" Version="1.0.1" />
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
         <PackageReference Include="xunit" Version="2.8.1" />
@@ -21,7 +20,6 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="Apache.Avro" Version="1.11.3" />
     </ItemGroup>
 
     <ItemGroup>
