--- a/TransformAndStore/ComponentTest/TransformAndStore.ComponentTest.csproj
+++ b/TransformAndStore/ComponentTest/TransformAndStore.ComponentTest.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Cheetah.Kafka" Version="1.0.1-RC5" />
+        <PackageReference Include="Cheetah.Kafka" Version="1.0.1" />
         <PackageReference Include="Cheetah.OpenSearch" Version="1.0.0" />
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
