--- a/TumblingWindow/ComponentTest/TumblingWindow.ComponentTest.csproj
+++ b/TumblingWindow/ComponentTest/TumblingWindow.ComponentTest.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Cheetah.Kafka" Version="1.0.1-RC5" />
+        <PackageReference Include="Cheetah.Kafka" Version="1.1.0-make-interface-method-obsolete-SNAPSHOT9" />
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
         <PackageReference Include="xunit" Version="2.8.1" />
