--- a/AvroToJson/pom.xml
+++ b/AvroToJson/pom.xml
@@ -30,7 +30,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <flink.version>1.19.1</flink.version>
+        <flink.version>1.20.0</flink.version>
     </properties>
 
     <repositories>
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>com.trifork.cheetah.processing</groupId>
             <artifactId>cheetah-lib-processing</artifactId>
-            <version>6.0.0</version>
+            <version>6.1.0-RC.1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
