--- a/JsonToAvro/pom.xml
+++ b/JsonToAvro/pom.xml
@@ -49,7 +49,7 @@ under the License.
         <dependency>
             <groupId>com.trifork.cheetah.processing</groupId>
             <artifactId>cheetah-lib-processing</artifactId>
-            <version>6.1.0-RC.1</version>
+            <version>6.1.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
