--- a/.github/workflows/run-component-tests.yml
+++ b/.github/workflows/run-component-tests.yml
@@ -24,6 +24,7 @@ jobs:
     if: ${{ needs.should-run.outputs.should-run }}
 
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     strategy:
       matrix:
         include:
