--- a/JsonToAvro/ComponentTest/jsonToAvro.ComponentTest.csproj
+++ b/JsonToAvro/ComponentTest/jsonToAvro.ComponentTest.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Cheetah.Kafka" Version="1.0.2" />
+        <PackageReference Include="Cheetah.Kafka" Version="2.1.0-json-SERDES-SNAPSHOT13" />
         <PackageReference Include="Cheetah.SchemaRegistry" Version="1.0.2" />
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.0" />
