--- a/SerializationErrorSideOutput/Dockerfile
+++ b/SerializationErrorSideOutput/Dockerfile
@@ -1,7 +1,7 @@
 #
 #  Install dependencies, compile sources, build jar.
 #
-FROM maven:3.9.9-eclipse-temurin-17-alpine as build
+FROM maven:3.9.9-eclipse-temurin-17-alpine AS build
 
 WORKDIR /app
 
