updated versions of jobs to 3.0.0, the current release

--- a/KeySerializationSchema/pom.xml
+++ b/KeySerializationSchema/pom.xml
@@ -23,7 +23,7 @@ under the License.
 
     <groupId>com.cheetah.example</groupId>
     <artifactId>KeySerializationSchema</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>3.0.0</version>
     <packaging>jar</packaging>
 
     <name>KeySerializationSchema Flink Job</name>
