--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -107,5 +107,5 @@ jobs:
       - name: Push changes
         if: steps.commit.outputs.commit
         run: |
-          git fetch origin ${{ github.head_ref || github.ref_name }}
+          git pull origin ${{ github.head_ref || github.ref_name }}
           git push origin ${{ github.head_ref || github.ref_name }}
