Remove force push

--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -107,4 +107,4 @@ jobs:
       - name: Push changes
         if: steps.commit.outputs.commit
         run: |
-          git push origin ${{ github.head_ref || github.ref_name }} --force
+          git push origin ${{ github.head_ref || github.ref_name }}
