--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -107,4 +107,5 @@ jobs:
       - name: Push changes
         if: steps.commit.outputs.commit
         run: |
+          git pull --rebase origin ${{ github.head_ref || github.ref_name }}
           git push origin ${{ github.head_ref || github.ref_name }}
