--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -102,7 +102,7 @@ jobs:
         uses: qoomon/actions--create-commit@v1
         with:
           message: "[MegaLinter] Apply linters fixes"
-          allow-empty: true
+          allow-empty: false
 
       - name: Push changes
         if: steps.commit.outputs.commit
