--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -86,6 +86,9 @@ jobs:
         env:
           branch_name: ${{ github.head_ref || github.ref_name }}
         run: |
+          git config --global user.email "nicolas.vuillamy@ox.security"
+          git config --global user.name "megalinter-bot"
+          git config --global commit.gpgSign false
           git checkout -B $branch_name
           git add .
 
@@ -104,6 +107,8 @@ jobs:
 
       - name: Push changes
         if: steps.commit.outputs.commit
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git pull --rebase origin ${{ github.head_ref || github.ref_name }}
           git push origin ${{ github.head_ref || github.ref_name }}
