--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -8,7 +8,7 @@ on:
   push:
     branches: [main, "release/**"]
   pull_request:
-    branches: [main]
+    branches: [main, "release/**", "renovate/**"]
 
 concurrency:
   group: ${{ github.ref }}-${{ github.workflow }}
